Fix margins, paddings and positions on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,12 +21,16 @@ nav {
 }
 
 nav img{
-    width: 40px;
     margin-top: 12px;
     margin-left: 60px;
 }
 
-.logo {
+.logo-img {
+    width: 40px;
+    height: 40px;
+}
+
+.logo-name {
     position: absolute;
     top: 0;
     font-family: "Nunito", sans-serif !important;
@@ -34,10 +38,6 @@ nav img{
     font-weight: 800;
     letter-spacing: -2px;
     margin-left: 5px;
-}
-
-.logo span {
-    color: black;
 }
 
 nav ul a {
@@ -162,6 +162,26 @@ footer {
 {
     background: linear-gradient(transparent, #7952bf);
     border-radius: 6px;
+}
+
+.container-logos {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
+
+.logo {
+    font-family: "Nunito", sans-serif !important;
+    font-size: 2.1rem;
+    font-weight: 800;
+    letter-spacing: -2px;
+    margin: 0 0 0 5px;
+}
+
+.logo span {
+    color: black;
 }
 
 .container-ilustration,
